# qr

./: .gitignore  AGENTS.md  LICENSE  PROJECT.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
docs/: AI_SKILL_ASSESSMENT.md  CODE_AUDIT_CHECKLIST.md  EVAL_EXTENDED_CASES.md  EVOLUTION_PLAN.md  RETRIEVAL_UPGRADE_PLAN.md  USE_CASES.md  WEB_UI_LAYOUT.md  短板修复.md
kb/: cli.py  config.py  db.py  governance.py  indexer.py  ollama_client.py  query.py  summary.py
kb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
qr/: activity_context.py  ai_assess.py  alerts.py  backfill.py  backup_ops.py  bundle_export.py  changelog.py  chat.py  chunking.py  cli.py  compliance.py  config.py  console_log.py  console_tail.py  context_meter.py  cursor_archive.py  cursor_bubble_time.py  cursor_prompt_time.py  cursor_retag.py  cursor_session_title.py  daily_plan.py  db.py  decision_draft.py  desktop_shell.py  digest.py  eval_runner.py  eval_suite.py  event_links.py  evolution_plan.py  export.py  facts.py  governance.py  health.py  hybrid.py  importer.py  index_health.py  indexer.py  links.py  maintenance.py  mcp_server.py  (+50 more)
scripts/: model_compare_four.py  model_eval.py  web_smoke.py
standards/: STANDARDS.md
tests/: test_activity_context.py  test_activity_log.py  test_bundle_export.py  test_citations_only.py  test_compliance_project_mixed.py  test_compliance_ship.py  test_console_log.py  test_core_paths.py  test_cursor_retag.py  test_cursor_roots.py  test_cursor_session_title.py  test_db_session.py  test_desktop_shell.py  test_eval_extended.py  test_eval_runner.py  (+24 more)
(+26 files in other folders)
