[project]
name = "kb"
version = "0.1.0"
description = "本地个人行为知识库与治理系统（离线，基于 ollama）"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
    "numpy>=1.26",
]

[project.scripts]
kb = "kb.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["kb", "kb.collectors"]
