[project]
name = "qr"
version = "0.1.0"
description = "QR本地个人行为知识库与治理系统（离线，基于 ollama）"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
    "numpy>=1.26",
    "sqlite-vec>=0.1.6",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
]

[project.scripts]
qr = "qr.cli:main"
qr-mcp = "qr.mcp_server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["qr", "qr.collectors"]

[tool.setuptools.package-data]
qr = ["static/*.html"]
